--- a/dashboard_super user.html
+++ b/dashboard_super user.html
@@ -6190,7 +6190,7 @@ async function initChartsOnce() {
         function getUnitIcon(type) {
             switch (type) {
                 case 'FWC': return 'fas fa-building';
-                case 'AW': return 'fas fa-plane';
+                case 'AW': return 'fas fa-building';
                 case 'BHQ': return 'fas fa-flag';
                 default: return 'fas fa-building';
             }
