--- a/dashboard_super user.html
+++ b/dashboard_super user.html
@@ -62,8 +62,8 @@
     <script type="module"
           src="https://agent.d-id.com/v2/index.js"
           data-mode="fabio"
-          data-client-key="Z29vZ2xlLW9hdXRoMnwxMDQ1ODAxOTI0NzE1ODExNjczNzI6RjhQTHZmLTVLU3A2Tng1V2JVYjFt"
-          data-agent-id="v2_agt_G23N5m1h"
+          data-client-key="Z29vZ2xlLW9hdXRoMnwxMDIxMzM0MjU3NTU1NzI4MDA3NzA6Mm5XWmh5My13TmRtcDJQU18wNFgx"
+          data-agent-id="v2_agt_U8CsBJU4"
           data-name="did-agent"
           data-monitor="true"
           data-orientation="horizontal"
